Correct some style issue: The brandName can be overflowed

--- a/clients/web/src/stylesheets/body/frontPage.styl
+++ b/clients/web/src/stylesheets/body/frontPage.styl
@@ -42,7 +42,6 @@
     display none
 
 .g-frontpage-body
-  margin-top 10px
   display flex
   justify-content center
 
