--- a/clients/web/src/stylesheets/layout/header.styl
+++ b/clients/web/src/stylesheets/layout/header.styl
@@ -11,6 +11,8 @@
   box-sizing border-box
 
 .g-app-title
+  overflow-x hidden
+  white-space nowrap
   font-size 30px
   font-weight 600
   line-height $headerHeight
